# STATProjects

./: .gitignore  CMakeLists.txt  README.md  global_defs.h  indiv.h  infodata.kdev4  infodatafixture.cpp  infodatafixture.h  infotestdata.cpp  infotestdata.h  test_indiv.cpp
datalib/: CMakeLists.txt  active_object.h  administrator.cpp  administrator.h  affectation.cpp  affectation.h  anacompo.h  annee.cpp  annee.h  basedoc.cpp  basedoc.h  baseevent.h  baseitem.cpp  baseitem.h  cancellable_object.h  couchconstants.cpp  couchconstants.h  couchdatamanager.cpp  couchdatamanager.h  couchdoc.cpp  couchdoc.h  departement.cpp  departement.h  departementperson.cpp  departementperson.h  depsiglenameitem.cpp  depsiglenameitem.h  distance_map.h  domainconstants.cpp  domainconstants.h  eigen_impl.cpp  eigen_impl.h  enseignant.cpp  enseignant.h  enseignantaffectation.cpp  enseignantaffectation.h  etudiant.cpp  etudiant.h  etudiantaffectation.cpp  etudiantaffectation.h  (+34 more)
