cmake_minimum_required(VERSION 2.6)
add_library(datalib itemfactory.cpp enseignantaffectation.cpp etudiantaffectation.cpp affectation.cpp administrator.cpp etudiant.cpp enseignant.cpp departementperson.cpp personitem.cpp semestre.cpp annee.cpp groupe.cpp matiere.cpp depsiglenameitem.cpp unite.cpp departement.cpp siglenameitem.cpp md5.cpp person.cpp domainconstants.cpp baseitem.cpp basedoc.cpp value.cpp couchdatamanager.cpp couchdoc.cpp 
couchconstants.cpp 
genutils.cpp eigen_impl.cpp)